fix whitespace for notification component

--- a/src/sass/components/_notification.scss
+++ b/src/sass/components/_notification.scss
@@ -4,6 +4,7 @@
 .notification {
   &__input {
     width: 100%;
+    margin-bottom: 1rem;
   }
   &__btn {
     width: 100%;
